fix the return of getRowView and import the vector api into examples